[gd_scene load_steps=2 format=3 uid="uid://cjawleqvg4vtj"]

[ext_resource type="Script" path="res://visual_vector.gd" id="1_fbmb6"]

[node name="VisualVector" type="Node2D"]
position = Vector2(-50, 0)
script = ExtResource("1_fbmb6")

[node name="VectorHead" type="Polygon2D" parent="."]
position = Vector2(0, 1)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(0, 0, 100, 0, 50, 100)

[node name="VectorLine" type="Line2D" parent="."]
points = PackedVector2Array(1, 0, 0, 1)
default_color = Color(0, 1, 0, 1)
